# improved-fortnight

./: MULTILINGUAL_SUPPORT.md  README.md  pyproject.toml  requirements.txt  setup.py
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
docs/: architecture.md  prd.md
docs/architecture/: 1-system-overview-key-drivers.md  2-logical-component-breakdown.md  3-data-flow-sequence-diagrams.md  4-infrastructure-deployment.md  5-nonfunctional-requirements-validation-appendices.md  index.md
docs/prd/: 1-purpose-problem-statement.md  2-logical-component-breakdown.md  2-objectives-success-criteria.md  3-core-features-requirements.md  4-user-experience-design-goals.md  5-technical-architecture-overview.md  6-release-plan-timeline.md  7-open-issues-appendices.md  index.md
docs/stories/: 1.1.core-library-setup.md
reflectpause_core/: __init__.py  async_core.py  core.py
reflectpause_core/cache/: __init__.py  toxicity_cache.py
reflectpause_core/config/: __init__.py  loader.py  manager.py
reflectpause_core/logging/: __init__.py  decision_logger.py
reflectpause_core/metrics/: __init__.py  accuracy.py  collector.py
reflectpause_core/prompts/: __init__.py  generator.py
reflectpause_core/prompts/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  vi.json  zh.json
reflectpause_core/toxicity/: __init__.py  engine.py  onnx_engine.py  perspective_api.py
tests/: test_core.py  test_decision_logger.py  test_integration.py  test_multilingual_support.py  test_prompt_generator.py  test_toxicity_engines.py
